--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,5 +1,6 @@
-<body >
-  <div class="container" style="margin:20px; text-align:center; max-height:100%;" [hidden]="hideAll">
+<body class="mat-app-background" style="background-image: url('assets/fondo6.jpeg'); background-repeat: no-repeat;
+background-attachment: fixed; background-position: center center; background-size: cover; ">
+  <div class="container" style="padding:20px ;text-align:center; max-height:100%;" [hidden]="hideAll">
 
     <mat-grid-list cols="3" rowHeight="20px">
       <mat-grid-tile [colspan]="3" [rowspan]="4">
