--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -42,7 +42,7 @@ background-attachment: fixed; background-position: center center; background-siz
           <a>
             &dash; TEAM DESARROLLO | OSCORP TECHNOLOGY &dash;
             <br>
-            desarrollo@oscorp.com.pe
+            desarrollo&#64;oscorp.com.pe
           </a>
         </p>
       </mat-grid-tile>
