--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="container" >
+<app-sidenav></app-sidenav>
+<router-outlet></router-outlet>
+<!-- <div class="container" >
   <mat-toolbar class="barra"  id="barra">
     <mat-toolbar-row >
       <button (click)="cajon.toggle()" mat-icon-button>
@@ -30,3 +32,4 @@
 
 
 </div>
+ -->
