--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -16,7 +16,7 @@
                 <img src="http://52.5.47.64/Logistica/assets/logoOscorp.png" class="h-8 me-3" alt="Oscorp Logo" />
                 <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">OSCORP</span>
                 <span>
-                  Bienvenido, SALA: {{' '+sala_name}}&nbsp;
+                  Bienvenido, SALA: {{' '+accessPoint_name}}&nbsp;
                 </span>
                 </a>
             </div>
