--- a/src/app/inicio/dialog-validate.html
+++ b/src/app/inicio/dialog-validate.html
@@ -6,8 +6,8 @@
 <div mat-dialog-content style="text-align:center">
 
   <mat-form-field  appearance="outline">
-    <mat-label>Sala:</mat-label>
-    <input matInput type="username" [(ngModel)]="data">
+    <mat-label>Usuario:</mat-label>
+    <input matInput type="username" [(ngModel)]="username">
   </mat-form-field>
 
   <mat-form-field  appearance="outline">
