--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -5,6 +5,7 @@
     </div>
     <div class="w-full flex justify-center">
       <img mat-card-image class="logo sm:w-1/6 w-2/5" [hidden]="hideDoc" src='assets/idcard.png'>
+      <img mat-card-image class="logo sm:w-1/6 w-2/5" [hidden]="hideLoad" src='assets/loading2.gif'>
     </div>
     <br>
     <div class="w-full flex justify-center">
@@ -100,4 +101,39 @@
   
     </div>
   </div>
+
+
+  <button hidden id="btnResultModal" data-modal-target="result-modal" data-modal-toggle="result-modal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+    Result modal
+  </button>
+    
+  <div id="result-modal" tabindex="-1" data-modal-backdrop="static" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+      <div class="relative p-4 w-full max-w-md max-h-full">
+          <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 w-full">
+<!--               <button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-modal">
+                  <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                  </svg>
+                  <span class="sr-only">Close modal</span>
+              </button> -->
+              <div class="p-4 md:p-5 text-center w-full">
+                <div class="line-boxes" style="text-align:center w-full">
+                  <img mat-card-image [hidden]="hideCheck" class="box w-full" id="box1" src='assets/allowed.png'>
+                  <img mat-card-image [hidden]="hideVip" class="box" id="box2" src='assets/allowed-vip.png' width="100%">        
+                  <img mat-card-image [hidden]="hideBlock" class="box" id="box3" src="assets/denied.png" width="100%">
+                  <img mat-card-image [hidden]="hideBirth" class="box" id="box4" src="assets/birthday.png" width="100%">
+                  <img mat-card-image [hidden]="hideObs" class="box" id="box5" src="assets/observed.png" width="100%">
+                  <img mat-card-image [hidden]="hideWarn" class="box" id="box6" src="assets/warn.png" width="100%">
+                </div>
+                <a>{{searchResult}}</a>
+                <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to delete this product?</h3>
+                <button data-modal-hide="result-modal" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                    Yes, I'm sure
+                </button>
+                <button data-modal-hide="result-modal" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">No, cancel</button>
+              </div>
+          </div>
+      </div>
+  </div>
+  
 </div>
