--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,11 +1,11 @@
-<div class="p-4 pt-20 h-screen w-screen">
+<div class="p-4 pt-10 h-screen w-screen">
   <div class="p-4 border-2 w-full h-full border-gray-200 border-dashed rounded-lg dark:border-gray-700">
     <div class="w-full flex justify-center">
-      <img mat-card-image class="logo sm:w-5/12 w-full" src="{{linkTitle}}" >
+      <img class="logo sm:w-4/12 w-full" src="{{linkTitle}}" >
     </div>
     <div class="w-full flex justify-center">
       <img mat-card-image class="logo sm:w-1/6 w-2/5" [hidden]="hideDoc" src='assets/idcard.png'>
-      <img mat-card-image class="logo sm:w-1/6 w-2/5" [hidden]="hideLoad" src='assets/loading2.gif'>
+      <img mat-card-image class="logo sm:w-1/12 w-1/5" [hidden]="hideLoad" src='assets/loading2.gif'>
     </div>
     <br>
     <div class="w-full flex justify-center">
@@ -36,7 +36,7 @@
         <div class="w-full flex justify-center">
           <p class="font-light text-gray-100 text-center">
             <a>
-              &dash; TEAM DESARROLLO | OSCORP TECHNOLOGY &dash;
+              &dash; CREARTTECH SOLUTIONS &dash;
               <br>
               desarrollo&#64;oscorp.com.pe
             </a>
@@ -103,7 +103,7 @@
   </div>
 
 
-  <button hidden id="btnResultModal" data-modal-target="result-modal" data-modal-toggle="result-modal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+  <button hidden="true" id="btnResultModal" data-modal-target="result-modal" data-modal-toggle="result-modal" class=" text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
     Result modal
   </button>
     
