--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -12,12 +12,12 @@
                           d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
                   </svg>
                 </button>
-                <a href="https://oscorp.com.pe/web" target="_blank" class="flex ms-2 md:me-24">
-                <img src="http://52.5.47.64/Logistica/assets/logoOscorp.png" class="h-8 me-3" alt="Oscorp Logo" />
+                <a target="_blank" class="flex ms-2 md:me-24">
+                <img [src]="accessPoint.image_url" class="h-8 me-3" alt="Oscorp Logo" />
                 <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">VC5</span>
                 <span class="w-3"></span>
                 <span class="justify-center">
-                  Bienvenido, Punto de acceso: {{' '+accessPoint_name}}&nbsp;
+                  Bienvenido, Punto de acceso: {{' '+accessPoint.name}}&nbsp;
                 </span>
                 </a>
             </div>
