--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -17,7 +17,7 @@
                 <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">VC5</span>
                 <span class="w-3"></span>
                 <span class="justify-center">
-                  Bienvenido, Punto de acceso: {{' '+accessPoint.name}}&nbsp;
+                  Bienvenido, Operario: {{' '+accessPoint.name}}&nbsp;
                 </span>
                 </a>
             </div>
