--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -13,7 +13,7 @@
                   </svg>
                 </button>
                 <a target="_blank" class="flex ms-2 md:me-24">
-                <img [src]="accessPoint.image_url" class="h-8 me-3" alt="Oscorp Logo" />
+                <img [src]="accessPoint.image_url" class="max-h-6" alt="Oscorp Logo" />
                 <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">VC5</span>
                 <span class="w-3"></span>
                 <span class="justify-center">
