--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -17,9 +17,9 @@
             <a style="color: white; font-size: 30px; font-weight: normal;">Realizar una búsqueda</a>
             <br>
 
-            <div>
+            <div class="items-center text-center">
               <label for="docInput" class="doc block mb-2 text-sm font-medium text-gray-100 dark:text-white">DNI/CE o PLACA:</label>
-              <input type="text" [disabled]="disableDocInput" [(ngModel)]="docInputText" name="docInput" id="docInput" (keyup.enter)="verifyEnter($event.target.value)" #docInput class="bg-gray-800 border text-center border-gray-300 text-gray-800 text-2xl rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white txtSearch" placeholder="" required>
+              <input type="text" [disabled]="disableDocInput" [(ngModel)]="docInputText" name="docInput" id="docInput" (keyup.enter)="verifyEnter($event.target.value)" #docInput class="bg-gray-800 border text-center border-gray-300 text-gray-800 text-2xl rounded-lg focus:ring-blue-500 focus:border-blue-500 w-5/6 p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white txtSearch" placeholder="" required>
             </div>
 
 <!--             <mat-form-field class="doc" appearance="outline" style=" min-width: 95%; height: 30px; font-size: 20px; ; ">
